# om-plugin-imports

./: .gitignore  CHANGELOG.md  LICENSE  OrphanInstanceDef.imports  OrphanInstanceImport.imports  README.md  cabal.project.freeze  om-plugin-imports.cabal
.github/workflows/: haskell.yml
src/OM/Plugin/: Imports.hs
src/OM/Plugin/Imports/: Format.hs
tests/: main.hs
tests/golden/: AmbiguousUser.full-imports  Basic.full-imports  Basic.in-place.hs  EnumPatImport.double-in-place.hs  LongImport.in-place.hs  OrphanInstanceImport.in-place.hs  PatternSynonym.double-in-place.hs  PatternSynonym.full-imports  Qualified.full-imports
tests/samples/: AmbiguousA.hs  AmbiguousB.hs  AmbiguousUser.hs  Basic.hs  EnumPatDef.hs  EnumPatImport.hs  LongImport.hs  OrphanInstanceDef.hi  OrphanInstanceDef.hs  OrphanInstanceImport.hs  PatternSynonym.hs  PatternSynonymDef.hs  Qualified.hs  WidgetDef.hi  WidgetDef.hs
