cabal-version:       3.0
name:                om-plugin-imports
version:             0.4.0.1.9.12
synopsis:            Plugin-based explicit import generation.
description:         See the README at https://github.com/owensmurray/om-plugin-imports/tree/master/#om-plugin-imports
homepage:            https://github.com/owensmurray/om-plugin-imports
license:             MIT
license-file:        LICENSE
author:              Rick Owens
maintainer:          rick@owensmurray.com
copyright:           2025 Rick Owens
category:            Compiler Plugin
build-type:          Simple
extra-source-files:
  README.md
  LICENSE

common dependencies
  build-depends:
    , base       >= 4.21.0.0 && < 4.22
    , containers >= 0.7      && < 0.8
    , ghc        >= 9.12.1   && < 9.13
    , safe       >= 0.3.21   && < 0.4
    , time       >= 1.14     && < 1.15

common warnings
  ghc-options:
    -Wall
    -Wmissing-deriving-strategies
    -Wmissing-export-lists
    -Wmissing-import-lists
    -Wredundant-constraints

library
  import: dependencies, warnings
  exposed-modules:
    OM.Plugin.Imports
  -- other-modules:
  -- other-extensions:
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite om-plugin-imports-test
  import: dependencies, warnings
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  default-language:    Haskell2010
  main-is:             main.hs
  build-depends:
    , om-plugin-imports
    , directory
    , filepath
    , text
    , tasty
    , tasty-golden
    , process


